# engage-protocol

./: .env.example  .gitignore  Anchor.toml  DEPLOY-WITH-PLAYGROUND.md  README.md  TRANSACTION-ERROR-FIX.md  TRANSACTION-ERROR-SOLUTION-SUMMARY.md  VERCEL-PRODUCTION-FIX.md  VERCEL-TESTNET-FIX.md  deploy-instructions.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
backend/: package.json  pnpm-lock.yaml
backend/src/: index.ts
programs/quiz-game/: Cargo.toml
programs/quiz-game/src/: lib.rs
public/.well-known/: farcaster.json
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
src/components/: CampaignCard.tsx  DebugPanel.tsx  EnvironmentStatus.tsx  FarcasterApp.tsx  GlobalHeader.tsx  Header.tsx  QuizGameContract.tsx  SolanaWalletConnection.tsx  TestnetNotice.tsx  WinnerModal.tsx  icons.tsx
src/components/ui/: Button.tsx  badge.tsx  card.tsx  dialog.tsx  label.tsx  progress.tsx  select.tsx  table.tsx
src/data/: mockCampaigns.ts
src/hooks/: useSolana.ts
src/lib/: nftMinting.ts
src/libs/: api.ts  blockchainServices.ts  program-types.ts  supportedChains.ts
src/providers/: SolanaProvider.tsx
src/routes/: __root.tsx  admin.tsx  contract.tsx  demo.tsx  index-dailywiser.tsx  index.tsx  landing.tsx  mint.tsx  profile.tsx  quiz-game.tsx  solana-demo.tsx  twitter.tsx  winners.tsx
